Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18933

QTextLayout::glyphs() returns wrong glyph positions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.8.0
    • 4.8.0
    • GUI: Text handling
    • None
    • Linux
    • 18fcbf7ae41504324cd453ba9b9655f3e94f6495

      If a single text line uses several fonts (for example when having latin and chinese glyphs on the same line) then the QGlyphs object returned by QTextLayout::glyphs() has incorrect glyph positions.

      See attached QML example to run with qmlscene.

        1. textLayoutBug.qml
          0.2 kB
          Yoann Lopes
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jiang Jiang Jiang
            ylopes Yoann Lopes
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes